# vibelang

./: .gitignore  CLAUDE.md
bootstrap/: Cargo.toml
bootstrap/src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs
bootstrap/src/analysis/: analyzer.rs  borrow.rs  errors.rs  mod.rs  ownership.rs  symbols.rs  types.rs
bootstrap/src/codegen/: call.rs  capture.rs  define.rs  expr.rs  intrinsics.rs  llvm.rs  memory.rs  mod.rs  module.rs  monomorph.rs  pattern.rs  project.rs  stmt.rs  types.rs
bootstrap/src/codegen/expr/: binary.rs  cast.rs  closure.rs  literal.rs  mod.rs  string.rs
bootstrap/src/codegen/intrinsics/: file.rs  io.rs  memory.rs  mmap.rs  mod.rs  network.rs  panic.rs  process.rs  ptr.rs
bootstrap/src/codegen/stmt/: control.rs  loops.rs  mod.rs  pattern_binding.rs
bootstrap/src/lsp/: analysis.rs  backend.rs  completion.rs  handlers.rs  hover.rs  mod.rs  semantic_tokens.rs  signature.rs  types.rs  utils.rs
bootstrap/src/parser/: expr.rs  helpers.rs  item.rs  mod.rs  pattern.rs  stmt.rs  types.rs
docs/: ROADMAP.md  decisions.md  tests.md
examples/: array_coercion.vibe  array_coercion2.vibe  array_i32_index.vibe  array_i32_len.vibe  arrays.vibe  arrays_len.vibe  arrays_sum.vibe  binary_search.vibe  borrow.vibe  borrow_error1.vibe  borrow_mut.vibe  borrow_read.vibe  break_continue.vibe  defer.vibe  defer_test.vibe  enum_simple.vibe  enum_test.vibe  enums.vibe  error_double_mut_borrow.vibe  error_mixed_borrow.vibe  error_use_after_move.vibe  factorial.vibe  fibonacci.vibe  find_longest.vibe  fizzbuzz.vibe  for_array.vibe  fork_test.vibe  fs.vibe  (+47 more)
(+176 files in other folders)
