[package]
name = "vibec"
version = "0.1.0"
edition = "2024"
description = "Bootstrap compiler for Vibelang"

[lib]
name = "vibec"
path = "src/lib.rs"

[features]
default = ["codegen"]
codegen = ["dep:inkwell"]

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm21-1"], optional = true }

# LSP dependencies (only for vibelang-lsp binary)
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[[bin]]
name = "vibec"
path = "src/main.rs"
required-features = ["codegen"]

[[bin]]
name = "vibelang-lsp"
path = "src/bin/vibelang-lsp.rs"
